fix issue with input not clearing after form submitted

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Rainbow Remodeling & Roofing serves the residential and commercial roofing and remodeling needs of DFW homeowners."
+      content="Rainbow Remodeling & Roofing serves the residential and commercial roofing and remodeling needs of Dallas and Fort Worth homeowners."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
